Update swagger API docs
